--- a/core/Rakefile
+++ b/core/Rakefile
@@ -1,2 +1,9 @@
 require "bundler/gem_tasks"
 
+task :console do
+  require 'irb'
+  require 'irb/completion'
+  require 'purrr'
+  ARGV.clear
+  IRB.start
+end
